Overflow Fix

--- a/public/Styles/Home.css
+++ b/public/Styles/Home.css
@@ -4,6 +4,7 @@ body
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 
